--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -20,6 +20,7 @@
 }
 
 .title {
+  color: #8bc34a;
   font-size: 20px;
   margin-left: 10px;
 }
@@ -27,12 +28,13 @@
 .date {
   font-size: 18px;
   margin: 10px;
-  color: #757575;
+  font-weight: 500;
+  color: #9e9e9e;
 }
 
 .description {
   margin: 10px;
-  color: #757575;
+  color: #424242;
 }
 
 .buttonContainer {
