--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,22 +1,17 @@
 .homeContainer {
   /* position: relative; */
   height: 30vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed; /* fixed = parallax effect*/
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .homeWrapper {
-  max-width: 1400px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  /* background-color: lightblue; */
+  margin: 20px 40px;
 }
 
 .nasaLogo {
@@ -25,12 +20,10 @@
 }
 
 .homeText {
-  width: 1000px;
   color: #3d1f04;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /* background-color: lightcyan; */
 }
 
 .headingOne {
