--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -6,10 +6,12 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
-  box-shadow: 0px -2px 15px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
 
 .nasaImage {
+  border-radius: 15px 15px 0 0;
   max-width: 345px;
   max-height: 250px;
 }
@@ -27,8 +29,8 @@
 
 .date {
   font-size: 18px;
-  margin: 10px;
-  font-weight: 500;
+  margin: 20px 10px;
+  font-weight: 400;
   color: #9e9e9e;
 }
 
