--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,7 +5,6 @@
   height: 80px;
   width: 100%;
   background-color: #8bc34a;
-  /* position: fixed; */
   z-index: 100;
 }
 
@@ -20,5 +19,6 @@
   color: white;
   padding: 15px;
   font-size: 25px;
-  transition: all 0.3s ease-in-out;
+  font-weight: 600;
+  letter-spacing: 5px;
 }
