--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -6,7 +6,7 @@
   max-width: 1200px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: auto;
   padding: 0 60px;
@@ -21,6 +21,13 @@
   color: #3d1f04;
   display: flex;
   flex-direction: column;
+}
+
+.projectContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* background-color: lightcoral; */
 }
 
 .headingOne {
@@ -39,20 +46,6 @@
   text-align: left;
 }
 
-@media screen and (max-width: 768px) {
-  .homeText {
-    justify-content: center;
-  }
-}
-
-.githubContainer {
-  width: 1000px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .galleryHeading {
   font-size: 40px;
   font-weight: 500;
@@ -64,6 +57,27 @@
   font-weight: 300;
   font-size: 22px;
   margin: 0 40px;
+}
+
+.inputContainer {
+  max-width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: 10px auto 0;
+}
+
+.dateInputBox {
+  width: 250px;
+  padding: 15px;
+  outline: none;
+  border: none;
+  background-color: #f5f5f5;
+  font-size: 15px;
+  border-radius: 10px;
+  text-align: center;
+  margin: 30px 20px 20px 20px;
 }
 
 .discoverButton {
